# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[metadata]
description-file = README.md
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = trading_calendars/_version.py
versionfile_build = trading_calendars/_version.py
tag_prefix = ""
parentdir_prefix = trading_calendars-
