[nosetests]
verbosity=2
detailed-errors=1
with-ignore-docstrings=1
with-timer=1
timer-top-n=15
cover-package=trading_calendars
logging-level=INFO
traverse-namespace=1

[metadata]
description-file = README.md
license_file = LICENSE

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = trading_calendars/_version.py
versionfile_build = trading_calendars/_version.py
tag_prefix = ""
parentdir_prefix = trading_calendars-

[flake8]
exclude =
    .git,
    __pycache__,
    versioneer.py
